// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Onboarding LocationFinderConnected component should render a custom component 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text>
      Yes, find my local campus nearest a Skyline chili.
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding LocationFinderConnected component should render with a user having selected a campus 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      Component={
        Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "defaultProps": Object {
            "buttonDisabled": false,
            "buttonText": "Yes, find my local campus",
            "description": "We'll use your location to connect you with your nearby campus and community",
            "slideTitle": "Let's select your local campus",
          },
          "displayName": "LocationFinder",
          "propTypes": Object {
            "BackgroundComponent": [Function],
            "buttonDisabled": [Function],
            "buttonText": [Function],
            "campus": [Function],
            "description": [Function],
            "onPressButton": [Function],
            "slideTitle": [Function],
          },
          "type": [Function],
        }
      }
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      onNavigate={[MockFunction]}
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Let's select your local campus
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll use your location to connect you with your nearby campus and community
            </Text>
          </View>
          <View
            horizontal={false}
            style={
              Object {
                "paddingHorizontal": 0,
                "paddingVertical": 16,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                bordered={false}
                disabled={false}
                pill={false}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#00676D",
                    "borderColor": "#00676D",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "elevation": 2,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 16,
                      "lineHeight": 23.04,
                    }
                  }
                >
                  Yes, find my local campus
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding LocationFinderConnected component should render with a user not having a campus selected 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      Component={
        Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "defaultProps": Object {
            "buttonDisabled": false,
            "buttonText": "Yes, find my local campus",
            "description": "We'll use your location to connect you with your nearby campus and community",
            "slideTitle": "Let's select your local campus",
          },
          "displayName": "LocationFinder",
          "propTypes": Object {
            "BackgroundComponent": [Function],
            "buttonDisabled": [Function],
            "buttonText": [Function],
            "campus": [Function],
            "description": [Function],
            "onPressButton": [Function],
            "slideTitle": [Function],
          },
          "type": [Function],
        }
      }
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      navigation={
        Object {
          "navigate": [MockFunction],
        }
      }
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Let's select your local campus
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll use your location to connect you with your nearby campus and community
            </Text>
          </View>
          <View
            horizontal={false}
            style={
              Object {
                "paddingHorizontal": 0,
                "paddingVertical": 16,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                bordered={false}
                disabled={false}
                pill={false}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#00676D",
                    "borderColor": "#00676D",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "elevation": 2,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 16,
                      "lineHeight": 23.04,
                    }
                  }
                >
                  Yes, find my local campus
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding LocationFinderConnected component should render with no data in the cache 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <RCTScrollView
      Component={
        Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "defaultProps": Object {
            "buttonDisabled": false,
            "buttonText": "Yes, find my local campus",
            "description": "We'll use your location to connect you with your nearby campus and community",
            "slideTitle": "Let's select your local campus",
          },
          "displayName": "LocationFinder",
          "propTypes": Object {
            "BackgroundComponent": [Function],
            "buttonDisabled": [Function],
            "buttonText": [Function],
            "campus": [Function],
            "description": [Function],
            "onPressButton": [Function],
            "slideTitle": [Function],
          },
          "type": [Function],
        }
      }
      contentContainerStyle={
        Object {
          "minHeight": "100%",
        }
      }
      onNavigate={[MockFunction]}
      overScrollMode="auto"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          forceInset={
            Object {
              "bottom": "always",
            }
          }
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "marginBottom": 48,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "paddingBottom": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#00676D",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Let's select your local campus
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 20.16,
                }
              }
            >
              We'll use your location to connect you with your nearby campus and community
            </Text>
          </View>
          <View
            horizontal={false}
            style={
              Object {
                "paddingHorizontal": 0,
                "paddingVertical": 16,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                bordered={false}
                disabled={false}
                pill={false}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#00676D",
                    "borderColor": "#00676D",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "elevation": 2,
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "opacity": 1,
                    "overflow": "hidden",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "InterUI-Bold",
                      "fontSize": 16,
                      "lineHeight": 23.04,
                    }
                  }
                >
                  Yes, find my local campus
                </Text>
              </View>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;
